2010-04-09  Jeremy Orlow  <jorlow@chromium.org>

        Reviewed by Darin Adler.

        Move the IDB::open ExceptionCode paramter to be last
        https://bugs.webkit.org/show_bug.cgi?id=37277

        Move the ExceptionCode paramter to the last position in 
        IndexedDatabaseRequest::open and friends.  It should definitely
        go after the callbacks to keep the parameters that come directly
        from javascript together.  And having output parameters appear
        last is done often in the code base, so it makes sense to push
        it past the Frame* param as well.

        * public/WebIndexedDatabase.h:
        * src/IndexedDatabaseProxy.cpp:
        (WebCore::IndexedDatabaseProxy::open):
        * src/IndexedDatabaseProxy.h:
        * src/WebIndexedDatabaseImpl.cpp:
        (WebKit::WebIndexedDatabaseImpl::open):
        * src/WebIndexedDatabaseImpl.h:

2010-04-09  Jochen Eisinger  <jochen@chromium.org>

        Reviewed by Darin Fisher.

        Complete move of createApplicationCacheHost from WebKitClient to WebFrameClient.
        https://bugs.webkit.org/show_bug.cgi?id=37330

        * public/WebApplicationCacheHost.h:
        * public/WebKitClient.h:
        * src/ApplicationCacheHostInternal.h:
        (WebCore::ApplicationCacheHostInternal::ApplicationCacheHostInternal):

2010-04-09  Marcus Bulach  <bulach@chromium.org>

        Reviewed by Jeremy Orlow.

        Crash on WebKit::WebGeolocationServiceBridgeImpl::stopUpdating() during frame disconnection
        Should not try to access WebViewClient if the frame has already been disconnected.
        https://bugs.webkit.org/show_bug.cgi?id=37318

        * src/WebGeolocationServiceBridgeImpl.cpp:
        (WebKit::WebGeolocationServiceBridgeImpl::stopUpdating):

2010-04-09  Jochen Eisinger  <jochen@chromium.org>

        Reviewed by Adam Barth.

        Expose SecurityOrigin::canRequest in WebSecurityOrigin.
        https://bugs.webkit.org/show_bug.cgi?id=37271
